Fixed bug in  error 'filename too long'

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ a {
 }
 
 .isCropped {
-    height: 1000px;
+    height: 800px;
     overflow-y: hidden;
 }
 
